2006-10-19 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/gbz80/crt0.s,
	* device/lib/gbz80/crt0_rle.s,
	* device/lib/gbz80/div.s,
	* device/lib/gbz80/fstubs.s,
	* device/lib/gbz80/heap.s,
	* device/lib/gbz80/mul.s,
	* device/lib/gbz80/putchar.s,
	* device/lib/gbz80/stubs.s,
	* device/lib/z80/crt0.s,
	* device/lib/z80/crt0_rle.s,
	* device/lib/z80/div.s,
	* device/lib/z80/fstubs.s,
	* device/lib/z80/heap.s,
	* device/lib/z80/mul.s,
	* device/lib/z80/putchar.s,
	* device/lib/z80/stubs.s: removed all leading underscores from area names

2006-10-17 Maarten Brock <sourceforge.brock AT dse.nl>

	* support/regression/ports/mcs51/support.c: use highest baudrate so the
	  regression tests are not waiting in the simulator for simulated
	  transmission of debug output

2006-10-16 Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	* device/lib/printf_large.c: slightly smaller
	* doc/sdccman.lyx: do not use spaces within html links

2006-10-16 Borut Razem <borut.razem AT siol.net>

	* configure.in, configure, sdccconf_in.h, src/SDCCglobal,
	  debugger/mcs51/Makefile.in, debugger/mcs51/sdcdb.[ch],
	  debugger/mcs51/aclocal.m4, debugger/mcs51/acinclide.m4,
	  debugger/mcs51/config.h.in, debugger/mcs51/configure.in,
	  debugger/mcs51/configure:
	  [ 1185668 ] add gnu readline support to sdcdb - enabled

2006-10-16 Raphael Neider <rneider AT web.de>

	* src/pic/pcode.c (BankSelect): another fix on (partial) BANKSELs,
	  fixes #1577882, removes close to all banking optimizations

2006-10-15 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCsymt.c (checkSClass): no error for uninitialised absolute
	  variables in code memory
	* support/regression/tests/absolute.c: added test for this

2006-10-15 Raphael Neider <rneider AT web.de>

	* src/pic/pcode.c (InsertBankSel): suppress BANKSELs for one bank
	  devices,
	  (BankSelect): emit BANKSEL before touching linker-placed regs,
	  fixes #1570934

2006-10-10 Raphael Neider <rneider AT web.de>
